[workspace]
resolver = "2"
members = [
    "rpgmxp-project",
    "rpgmxp-types",
    "rpgm-tool",
    "rpgmvx-types", "rpgm-common-types",
]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-cargo-bloat]
inherits = "release"
debug = true
strip = false
