[package]
name = "rpgm-common-types"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
flate2 = { version = "1.1.0" }
ruby-marshal = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs" }
ruby-marshal-derive = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs" }
serde = { version = "1.0.219", features = [ "derive" ] }
