[package]
name = "rpgm-tool"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
camino = "1.1.9"
memchr = "2.7.4"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
object = { version = "0.36.7", features = [ "pe", "read" ], default-features = false }
rgssad = { git = "https://github.com/nathaniel-daniel/rgssad-rs", version = "0.0.0" }
rpgm-common-types = { version = "0.0.0", path = "../rpgm-common-types" }
rpgmxp-types = { version = "0.0.0", path = "../rpgmxp-types" }
rpgmvx-types = { version = "0.0.0", path = "../rpgmvx-types" }
ruby-marshal = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs", version = "0.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
quick-xml = { version = "0.37.2", features = [ "serialize" ] }

