[package]
name = "rpgmxp-project"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.78"
argh = "0.1.12"
rpgmxp-types = { path = "../rpgmxp-types" }
ruby-marshal = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
