[package]
name = "rpgmxp-tool"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
camino = "1.1.7"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
rgssad = { git = "https://github.com/nathaniel-daniel/rgssad-rs", version = "0.0.0" }
rpgmxp-types = { version = "0.0.0", path = "../rpgmxp-types" }
ruby-marshal = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs", version = "0.0.0" }
serde = "1.0.209"
serde_json = "1.0.120"
walkdir = "2.4.0"
