[package]
name = "rpgmxp-types"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rpgm-common-types = { version = "0.0.0", path = "../rpgm-common-types" }
ruby-marshal = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs" }
ruby-marshal-derive = { git = "https://github.com/nathaniel-daniel/ruby-marshal-rs" }
serde = { version = "1.0.219", features = [ "derive" ] }
